Added Figure 3 preprocessing code
Notebook updates, and split fig3/fig5 and implemented new scheme

Updated fig5 sim to save to correct .h5

Updated executable bits on fig3/fig5 sh

Updated merge script to handle separate fig3/fig5 runs

Upped figure 5's run count and add exit logging message

Added tandem-up simulation to fig 3/5

Upped topo rate maximum

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -820,12 +820,13 @@
     "            group_df = []\n",
     "            for run in fig4_raw[group].values():\n",
     "                run_shape = run['mRNA'].shape\n",
+    "                mRNA = run['mRNA'][:,:,:]\n",
     "                for subrun in range(run_shape[2]):\n",
     "                    time = run['time'][:]\n",
     "                    # Perform correlation after \"burn-in\" time\n",
     "                    # of 10000 seconds\n",
-    "                    her1 = run['mRNA'][:,0,subrun]\n",
-    "                    her7 = run['mRNA'][:,1,subrun]\n",
+    "                    her1 = mRNA[:,0,subrun]\n",
+    "                    her7 = mRNA[:,1,subrun]\n",
     "                    her1_trimmed = her1[time > 10000]\n",
     "                    her7_trimmed = her7[time > 10000]\n",
     "                    mc_her1 = her1_trimmed - np.mean(her1_trimmed)\n",
@@ -987,6 +988,308 @@
    "outputs": [],
    "source": [
     "fig4.savefig('../writeups/figures/modeling_paper/fig_4_mpl.svg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 3, Figure 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (datadir/'projects'/'tangles'/'simulations'/'fig3_examples.gzip').exists():\n",
+    "    fig3_examples = pd.read_parquet(datadir/'projects'/'tangles'/'simulations'/'fig3_examples.gzip')\n",
+    "    print(f'Loaded {len(fig3_examples)} total example datapoints from Parquet cached file')\n",
+    "else:\n",
+    "    with h5py.File(\n",
+    "        datadir/'projects'/'tangles'/'simulations'/'modeling_fig3_fig5_combined.h5', 'r') as fig3_fig5_raw:\n",
+    "        n_examples = 5\n",
+    "        example_counts = {}\n",
+    "        fig3_examples = []\n",
+    "        i = 1\n",
+    "        for group in fig3_fig5_raw.keys():\n",
+    "            for run in fig3_fig5_raw[group].values():\n",
+    "                run_shape = run['mRNA'].shape\n",
+    "                condition = run.attrs['comment'].decode('utf-8')\n",
+    "                if not condition.startswith('fig3'):\n",
+    "                    continue\n",
+    "                sc_dependent = run.attrs['rates.sc_dependent']\n",
+    "                is_plasmid = run.attrs['bcs.is_circular']\n",
+    "                hill_n     = run.attrs['hill_coeff']\n",
+    "                k_val      = run.attrs['K_val']\n",
+    "                k_factor   = run.attrs['K_factor']\n",
+    "                mRNA_deg_rate = run.attrs['rates.mRNA_degradation']\n",
+    "                if 'time' in run.keys():\n",
+    "                    time = run['keys']\n",
+    "                else:\n",
+    "                    time = np.linspace(0.0, 50000.0, 500)\n",
+    "                c_tup = (condition, hill_n, k_val, k_factor, sc_dependent, is_plasmid, mRNA_deg_rate)\n",
+    "                if c_tup not in example_counts or example_counts[c_tup] < n_examples:\n",
+    "                    fig3_examples.append(pd.DataFrame(data={\n",
+    "                        'condition': condition,\n",
+    "                        'sc_dependent': sc_dependent,\n",
+    "                        'is_plasmid': is_plasmid,\n",
+    "                        'mRNA_deg_rate': mRNA_deg_rate,\n",
+    "                        'hill_n': hill_n,\n",
+    "                        'k_val': k_val,\n",
+    "                        'k_factor': k_factor,\n",
+    "                        'time': time,\n",
+    "                        'mRNA_1': run['mRNA'][:,0,0],\n",
+    "                        'mRNA_2': run['mRNA'][:,1,0],\n",
+    "                        'idx': i\n",
+    "                    }))\n",
+    "                    i += 1\n",
+    "                    if c_tup not in example_counts:\n",
+    "                        example_counts[c_tup] = 1\n",
+    "                    else:\n",
+    "                        example_counts[c_tup] += 1\n",
+    "        fig3_examples = pd.concat(fig3_examples)\n",
+    "        print(f'Loaded {len(fig3_examples)} example datapoints!')\n",
+    "        fig3_examples.to_parquet(datadir/'projects'/'tangles'/'simulations'/'fig3_examples.gzip', compression='gzip')\n",
+    "if (datadir/'projects'/'tangles'/'simulations'/'fig3_summaries.gzip').exists():\n",
+    "    fig3_df = pd.read_parquet(datadir/'projects'/'tangles'/'simulations'/'fig3_summaries.gzip')\n",
+    "    print(f'Loaded {len(fig3_df)} simulation runs from Parquet cached file')\n",
+    "else:\n",
+    "    pass\n",
+    "    with h5py.File(\n",
+    "        datadir/'projects'/'tangles'/'simulations'/'modeling_fig3_fig5_combined.h5', 'r') as fig3_fig5_raw:\n",
+    "        fig3_df = []\n",
+    "        i = 0\n",
+    "        # Extract the Spearman correlation between the two mRNA values\n",
+    "        # alongside storing the mean-centered correlation and auto-correlation\n",
+    "        # of the two.\n",
+    "        for group in fig3_fig5_raw.keys():\n",
+    "            group_df = []\n",
+    "            for run in fig3_fig5_raw[group].values():\n",
+    "                run_shape = run['mRNA'].shape\n",
+    "                condition = run.attrs['comment'].decode('utf-8')\n",
+    "                if not condition.startswith('fig3'):\n",
+    "                    continue\n",
+    "                hill_n    = run.attrs['hill_coeff']\n",
+    "                k_val     = run.attrs['K_val']\n",
+    "                k_factor  = run.attrs['K_factor']\n",
+    "                sc_dependent = run.attrs['rates.sc_dependent']\n",
+    "                is_plasmid = run.attrs['bcs.is_circular']\n",
+    "                mRNA_deg_rate = run.attrs['rates.mRNA_degradation']\n",
+    "                if 'time' in run.keys():\n",
+    "                    time = run['keys']\n",
+    "                else:\n",
+    "                    time = np.linspace(0.0, 50000.0, 500)\n",
+    "                escape_times = np.zeros(run_shape[2])\n",
+    "                mRNA = run['mRNA'][:,:,:]\n",
+    "                for subrun in range(run_shape[2]):\n",
+    "                    mRNA_1 = mRNA[:,0,subrun]\n",
+    "                    mRNA_2 = mRNA[:,1,subrun]\n",
+    "                    basin_escape = np.nonzero(mRNA_2 > mRNA_1)[0]\n",
+    "                    if len(basin_escape) > 0:\n",
+    "                        escape_times[subrun] = time[basin_escape[0]]\n",
+    "                    else:\n",
+    "                        escape_times[subrun] = np.inf\n",
+    "                group_df.append(pd.DataFrame(data={\n",
+    "                    'condition': condition,\n",
+    "                    'sc_dependent': sc_dependent,\n",
+    "                    'is_plasmid': is_plasmid,\n",
+    "                    'mRNA_deg_rate': mRNA_deg_rate,\n",
+    "                    'hill_n': hill_n,\n",
+    "                    'k_val': k_val,\n",
+    "                    'k_factor': k_factor,\n",
+    "                    'escape_time': escape_times}))\n",
+    "            fig3_df.append(pd.concat(group_df, ignore_index=True))\n",
+    "            print(f'Loaded {len(fig3_df[-1])} simulations...')\n",
+    "        fig3_df = pd.concat(fig3_df, ignore_index=True)\n",
+    "        print(f'Loaded {len(fig3_df)} total simulations!')\n",
+    "        fig3_df.to_parquet(datadir/'projects'/'tangles'/'simulations'/'fig3_summaries.gzip', compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summarize_escape_times(df):\n",
+    "    sorted_escapes = sorted(df.escape_time)\n",
+    "    counts = np.arange(1, len(sorted_escapes) + 1)\n",
+    "    interp_time = np.linspace(0, 50000, 500)\n",
+    "    return pd.DataFrame({\n",
+    "        'time': interp_time,\n",
+    "        'escape_percent': np.interp(interp_time, sorted_escapes, counts) / len(sorted_escapes)\n",
+    "    })\n",
+    "fig3_escapes = fig3_df.groupby([\n",
+    "    'condition', 'sc_dependent', 'is_plasmid', 'mRNA_deg_rate', 'k_factor', 'hill_n']).apply(\n",
+    "        summarize_escape_times).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3_examples[\n",
+    "    (fig3_examples.time==50000.0) &\n",
+    "    (fig3_examples.k_factor==1.0) &\n",
+    "    (fig3_examples.hill_n==1.0)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3_escapes[\n",
+    "    (fig3_escapes.time == 50000.0) & \n",
+    "    (fig3_escapes.escape_percent > 0.1) &\n",
+    "    (fig3_escapes.k_factor == 1.0) &\n",
+    "    (fig3_escapes.condition == 'fig3.tandem')\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3_df[\n",
+    "    (fig3_df.condition=='fig3.tandem') &\n",
+    "    (fig3_df.hill_n==1.0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3b_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3b_df = fig3_escapes[\n",
+    "    (fig3_escapes.is_plasmid == 0) &\n",
+    "    (fig3_escapes.sc_dependent == 1.0) &\n",
+    "    (np.abs(fig3_escapes.mRNA_deg_rate - 1 / 120.0) < 0.0001) &\n",
+    "    (fig3_escapes.k_factor == 1) &\n",
+    "    (fig3_escapes.hill_n == 1.5)\n",
+    "].copy()\n",
+    "sns.lineplot(data=fig3b_df, x='time', y='escape_percent', hue='condition')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_mrna1 = fig3_examples[fig3_examples.idx == 500]['mRNA_1']\n",
+    "test_mrna2 = fig3_examples[fig3_examples.idx == 500]['mRNA_2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nonzero(np.array(test_mrna2 > test_mrna1))[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nonzero(np.zeros(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the overall figure, gridspec, and add subfigure labels.\n",
+    "fig4 = plt.figure(figsize=(6.2,5.12))\n",
+    "fig4_gridspec = gridspec.GridSpec(3, 2, figure=fig4,\n",
+    "    wspace=0.1, hspace=0.1)\n",
+    "fig4_subfigures = {\n",
+    "    'A': fig4.add_subfigure(fig4_gridspec[0,0]),\n",
+    "    'B': fig4.add_subfigure(fig4_gridspec[0,1]),\n",
+    "    'C': fig4.add_subfigure(fig4_gridspec[1,:]),\n",
+    "    'D': fig4.add_subfigure(fig4_gridspec[2,0]),\n",
+    "    'E': fig4.add_subfigure(fig4_gridspec[2,1])\n",
+    "}\n",
+    "for label, subfig in fig4_subfigures.items():\n",
+    "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=13, fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
+    "fig4_palette = {\n",
+    "    'her1': '#5254a3',\n",
+    "    'her7': '#9c9ede',\n",
+    "    'fig4.uncoupled': '#b5cf6b',\n",
+    "    'fig4.fully-coupled': '#637939',\n",
+    "    'fig4.tangles-coupled': main_palette['divergent'],\n",
+    "    'gray': main_palette['gray'],\n",
+    "    'background_gray': '#DDDDDD'\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Fig2c\n",
+    "fig4_subfigures['C'].subplots_adjust(left=0.12, bottom=0.25, right=0.95, top=0.8)\n",
+    "fig_4c_axes = fig4_subfigures['C'].subplots(ncols=3, sharey=True)\n",
+    "for ax, condition in zip(fig_4c_axes, ['fig4.uncoupled', 'fig4.fully-coupled', 'fig4.tangles-coupled']):\n",
+    "    df = fig4_examples[(fig4_examples.condition == condition) & (fig4_examples.temperature == 301.15)]\n",
+    "    idx = df.idx.unique()[1]\n",
+    "    if condition.endswith('tangles-coupled'):\n",
+    "        tangles_idx = idx\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her1_mRNA', ax=ax, color=fig4_palette['her1'])\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her7_mRNA', ax=ax, color=fig4_palette['her7'])\n",
+    "    sns.despine(ax=ax)\n",
+    "    ax.set_ylim([0, 80])\n",
+    "    ax.set_xlim([0, 30000])\n",
+    "    ax.set_xticks([0, 15000, 30000])\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_facecolor(fig4_palette[condition] + '55')\n",
+    "    for tick in ax.xaxis.get_major_ticks():\n",
+    "        tick.label1.set_horizontalalignment('right')\n",
+    "fig_4c_axes[0].set_ylabel('mRNA counts')\n",
+    "fig_4c_axes[1].set_xlabel('Time (s)')\n",
+    "fig_4c_axes[0].text(x=0.5, y=1.1, s='Uncoupled', horizontalalignment='center', transform=fig_4c_axes[0].transAxes)\n",
+    "fig_4c_axes[1].text(x=0.5, y=1.1, s='Transcript coupled', horizontalalignment='center', transform=fig_4c_axes[1].transAxes)\n",
+    "fig_4c_axes[2].text(x=0.5, y=1.1, s='Biophysical coupled', horizontalalignment='center', transform=fig_4c_axes[2].transAxes)\n",
+    "# Add inset axes\n",
+    "fig_4c_inset = fig_4c_axes[2].inset_axes([0.22, 0.78, 0.28, 0.28])\n",
+    "sns.lineplot(data=df[df.idx == tangles_idx], x='time', y='her1_mRNA',\n",
+    "    ax=fig_4c_inset, color=fig4_palette['her1'])\n",
+    "sns.lineplot(data=df[df.idx == tangles_idx], x='time', y='her7_mRNA',\n",
+    "    ax=fig_4c_inset, color=fig4_palette['her7'])\n",
+    "sns.despine(ax=fig_4c_inset)\n",
+    "fig_4c_inset.set_facecolor(fig4_palette['background_gray'])\n",
+    "fig_4c_inset.set_xlabel('')\n",
+    "fig_4c_inset.set_ylabel('')\n",
+    "fig_4c_inset.set_xticks([])\n",
+    "fig_4c_inset.set_yticks([])\n",
+    "fig4.savefig('test.svg')"
    ]
   },
   {
