--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -184,13 +184,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (datadir/'projects'/'tangles'/'simulations'/'fig1_fig2_summary.gzip').exists():\n",
-    "    summary_df = pd.read_parquet(datadir/'projects'/'tangles'/'simulations'/'fig1_fig2_summary.gzip')\n",
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig1_fig2_summary.gzip').exists():\n",
+    "    summary_df = pd.read_parquet(rd.datadir/'projects'/'tangles'/'simulations'/'fig1_fig2_summary.gzip')\n",
     "    print(f'Loaded {len(summary_df)} total simulation runs from Parquet cached file')\n",
     "else:\n",
     "    summary_df = []\n",
     "    with h5py.File(\n",
-    "        datadir/'projects'/'tangles'/'simulations'/'modeling_fig1_fig2_combined_summaries.h5', 'r') as summaries:\n",
+    "        rd.datadir/'projects'/'tangles'/'simulations'/'modeling_fig1_fig2_combined_summaries.h5', 'r') as summaries:\n",
     "        for group in summaries.keys():\n",
     "            group_df = []\n",
     "            for run in summaries[group].values():\n",
@@ -214,7 +214,39 @@
     "    summary_df = pd.concat(summary_df, ignore_index=True)\n",
     "    print(f'Loaded {len(summary_df)} total simulation runs!')\n",
     "    summary_df['condition'] = pd.Categorical(summary_df['condition'])\n",
-    "    summary_df.to_parquet(datadir/'projects'/'tangles'/'simulations'/'fig1_fig2_summary.gzip', compression='gzip')"
+    "    summary_df.to_parquet(rd.datadir/'projects'/'tangles'/'simulations'/'fig1_fig2_summary.gzip', compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, split in enumerate(np.array_split(summary_df, 8)):\n",
+    "    split.to_parquet(rd.datadir/'projects'/'tangles'/'simulations'/f'fig1_fig2_summary.gzip.{i}', compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_fig1_dfs = [pd.read_parquet(\n",
+    "    rd.datadir/'projects'/'tangles'/'simulations'/f'fig1_fig2_summary.gzip.{i}')\n",
+    "    for i in range(4)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "gc.collect()"
    ]
   },
   {
@@ -1597,7 +1629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
